Final Update for today

--- a/main.html
+++ b/main.html
@@ -94,11 +94,11 @@
                             <img src="images/rock.png" style="height: 90px;"><p>ROCK</p>
                         </button>
 
-                        <button id="paper" type="button" class="btn btn-primary round-btn">
+                        <button id="paper" type="button" class="btn btn-primary round-btn ml-1">
                             <img src="images/paper.png" style="height: 90px;"><p>PAPER</p>
                         </button>
 
-                        <button id="scissor" type="button" class="btn btn-primary round-btn">
+                        <button id="scissor" type="button" class="btn btn-primary round-btn ml-1">
                             <img src="images/scissor.png" style="height: 90px;"><p>SCISSOR</p>
                         </button>
                     </div>
