--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <p class="lead">
                 <a href="main.html" id="play" class="btn btn-primary btn-lg">PLAY NOW!</a>
             </p>
-            <p class="text-center"><small> MYRA - JAY - RUTH - MAE - NIX</small></p>
+            <p class="text-center"><small> MYRA.ISIDRO - JAY.ALEGRIA - RUTH.GAYO - MAE.REYES - NIX.CAPANAG</small></p>
         </div>
         
     </div>
