--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
     <div class="container mt-4">
         <div class="row">
             <!-- USER SCORE -->
-            <div class="col-sm-6">
+            <div class="col-6 col-sm-6">
                 <div class="list-group">
                     <div class="list-group-item list-group-item-action flex-column align-items-start active">
                         <div class="row" style="font-size: 25px;">
@@ -39,7 +39,7 @@
             </div>
 
             <!-- COMPUTER SCORE -->
-            <div class="col-sm-6">
+            <div class="col-6 col-sm-6">
                 <div class="list-group">
                     <div class="list-group-item list-group-item-action flex-column align-items-start active">
                         <div class="row" style="font-size: 25px;">
